--- a/assets/style.css
+++ b/assets/style.css
@@ -85,8 +85,8 @@ section {
     width: 500px;
     color: #024e76;
     position: absolute;
-    bottom: 0px;
-    right: 0px;
+    bottom: 60px;
+    right: 100px;
 }
 
 .hero-form h3 {
@@ -266,3 +266,22 @@ section {
     margin: 30px 0 0 60px;
     color: white;
 }
+
+.contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+}
+
+.contact-info p, 
+.contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 20px;
+    font-style: normal;
+}
+
+.contact-info a {
+    color: #fce138;
+}
+
+/* REACH OUT STYLES END */
