--- a/assets/style.css
+++ b/assets/style.css
@@ -143,10 +143,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
     border-bottom: 3px solid;
-    display: inline-block;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -155,10 +156,6 @@ section {
 
 .secondary-border {
     border-color: #39a6b2;
-}
-
-.intro {
-    text-align: center;
 }
 
 .intro h2 {
@@ -170,10 +167,10 @@ section {
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background-color: #fce138;
 }
 
@@ -205,7 +202,6 @@ section {
 }
 
 .trainers {
-    text-align:center;
 }
 
 .trainer {
@@ -245,26 +241,8 @@ section {
     line-height: 1.3;
 }
 
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
-.section-title {
-    font-size: 55px;
-    display: inline-block;
-    padding: 0 100px 20px 100px;
-    border-bottom: 3px solid;
-    margin-bottom: 35px;
-    color: #024e76;
-}
-
 /* REACH OUT STYLES START */
 .contact {
-    text-align: center;
     background: #024e76
 }
 
@@ -304,3 +282,15 @@ section {
 }
 
 /* REACH OUT STYLES END */
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
+}
