--- a/assets/style.css
+++ b/assets/style.css
@@ -41,7 +41,7 @@ header nav ul {
     list-style: none;
 }
 header nav ul li a {
-    margin: 0 30px;
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
 }
@@ -82,6 +82,7 @@ section {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    align-items: flex-start;
 }
 
 .hero-cta {
@@ -90,7 +91,7 @@ section {
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 
 .hero-cta h2 {
@@ -141,7 +142,7 @@ section {
 /*Hero Style End*/
 
 .section-title {
-    font-size: 55px;
+    font-size: 48px;
     color: #024e76;
     border-bottom: 3px solid;
     padding-bottom: 20px;
@@ -344,4 +345,24 @@ section {
 
 .flex-row {
     display: flex;
+}
+
+/* Media Query for Smaller Desktop Screen*/
+@media screen and (max-width: 980px) {
+}
+
+/* Media Query For Tablets and Smaller */
+@media screen and (max-width: 768px) {
+    header h1 {
+        /* this will be applied on any screen smaller than 768xp*/
+        font-size: 80px;
+    }
+}
+
+/* Media Query For Mobile Phone and Smaller */
+@media screen and (max-width: 575px) {
+    header h1 {
+        /* this will be applied on any screen smaller than 575px*/
+        font-size: 100px;
+    }
 }
